Change screen lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,13 +14,10 @@ monitor_speed = 115200
 lib_deps =
     luisllamasbinaburo/I2CScanner @ ^1.0.1
     adafruit/Adafruit CAP1188 Library @ ^1.1.2
-    adafruit/Adafruit SSD1306 @ ^2.5.11
-    fastled/FastLED @ ^3.7.1
-    arduino-libraries/WiFiNINA @ ^1.8.14
-    jandrassy/ArduinoOTA @ ^1.1.0
+    fastled/FastLED @ ^3.7.6
+    olikraus/U8g2 @ ^2.35.27
 
 [common]
-monitor_speed = 115200
 build_flags =
     !echo '-D COMMIT_HASH=\\"'$(git log -1 --format=%%h)'\\"'
     !echo '-D TIMESTAMP=\\"'$(date +%%Y-%%m-%%d)'\\"'
@@ -31,8 +28,7 @@ board = nanoatmega328
 build_flags = ${common.build_flags}
 
 [env:nanoatmega328-debug]
-platform = atmelavr
-board = nanoatmega328
+extends = env:nanoatmega328
 build_type = debug
 build_flags = ${common.build_flags} -D DEBUG
 
@@ -40,9 +36,13 @@ build_flags = ${common.build_flags} -D DEBUG
 platform = atmelsam
 board = nano_33_iot
 
+lib_deps =
+    arduino-libraries/WiFiNINA @ ^1.8.14
+    jandrassy/ArduinoOTA @ ^1.1.0
+
 [env:nano33iot-debug]
-platform = atmelsam
-board = nano_33_iot
+extends = env:nano33iot
+
 build_type = debug
 build_flags = ${common.build_flags} -D DEBUG
 
@@ -50,8 +50,20 @@ build_flags = ${common.build_flags} -D DEBUG
 platform = espressif32
 board = arduino_nano_esp32
 
+[env:nanoesp32-ota]
+extends = env:nanoesp32
+
+upload_protocol = espota
+upload_port = table-salon.local
+upload_flags = --auth=password
+
 [env:nanoesp32-debug]
-platform = espressif32
-board = arduino_nano_esp32
+extends = env:nanoesp32
+build_type = debug
+build_flags = ${common.build_flags} -D DEBUG
+
+[env:nanoesp32-debug-ota]
+extends = env:nanoesp32-ota
+
 build_type = debug
 build_flags = ${common.build_flags} -D DEBUG
