--- a/platformio.ini
+++ b/platformio.ini
@@ -11,59 +11,36 @@
 framework = arduino
 monitor_speed = 115200
 
-lib_deps =
-    luisllamasbinaburo/I2CScanner @ ^1.0.1
-    adafruit/Adafruit CAP1188 Library @ ^1.1.2
-    fastled/FastLED @ ^3.7.6
-    olikraus/U8g2 @ ^2.35.27
-
 [common]
+lib_deps =
+    adafruit/Adafruit CAP1188 Library @ ^1.1.3
+    bblanchon/ArduinoJson @ ^7.4.2
+    esp32async/ESPAsyncWebServer @ ^3.8.1
+    fastled/FastLED @ ^3.10.3
+    jsc/ArduinoLog @ ^1.2.1
+    luisllamasbinaburo/I2CScanner @ ^1.0.1
+
 build_flags =
     !echo '-D COMMIT_HASH=\\"'$(git log -1 --format=%%h)'\\"'
-    !echo '-D TIMESTAMP=\\"'$(date +%%Y-%%m-%%d)'\\"'
-
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-build_flags = ${common.build_flags}
-
-[env:nanoatmega328-debug]
-extends = env:nanoatmega328
-build_type = debug
-build_flags = ${common.build_flags} -D DEBUG
-
-[env:nano33iot]
-platform = atmelsam
-board = nano_33_iot
-
-lib_deps =
-    arduino-libraries/WiFiNINA @ ^1.8.14
-    jandrassy/ArduinoOTA @ ^1.1.0
-
-[env:nano33iot-debug]
-extends = env:nano33iot
-
-build_type = debug
-build_flags = ${common.build_flags} -D DEBUG
+    !echo '-D TIMESTAMP=\\"'$(date +%%Y.%%m.%%d)'\\"'
 
 [env:nanoesp32]
 platform = espressif32
 board = arduino_nano_esp32
+build_flags = ${common.build_flags} -D BOARD_USES_HW_GPIO_NUMBERS
+lib_deps = ${common.lib_deps}
+#upload_protocol = esptool
 
 [env:nanoesp32-ota]
 extends = env:nanoesp32
+build_flags = ${common.build_flags} -D BOARD_USES_HW_GPIO_NUMBERS
 
 upload_protocol = espota
 upload_port = table-salon.local
 upload_flags = --auth=password
+    #!echo '--auth=$(cat include/common.secrets.h | grep OTA_PASSWORD | cut -d \\" \\" -f3)'
 
 [env:nanoesp32-debug]
 extends = env:nanoesp32
 build_type = debug
-build_flags = ${common.build_flags} -D DEBUG
-
-[env:nanoesp32-debug-ota]
-extends = env:nanoesp32-ota
-
-build_type = debug
-build_flags = ${common.build_flags} -D DEBUG
+build_flags = ${common.build_flags} -D BOARD_USES_HW_GPIO_NUMBERS -D DEBUG
